--- a/vr.html
+++ b/vr.html
@@ -1,1 +1,16 @@
-.
+<html>
+  <head>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  </head>
+  <body>
+    <a-scene>
+      <a-box position="-1 0.5 -4" rotation="0 0 45" color="#0000FF"></a-box>
+      <a-box position="-3 0.2 -4" rotation="0 0 45" color="#FFB800"></a-box>
+      <a-box position="-2 0.8 -5" rotation="0 0 45" color="#0000FF"></a-box>
+      <a-sphere position="0 1.25 -5" radius="2.25" color="#EF2D5E"></a-sphere>
+      <a-cylinder pos      ition="1 0.75 -3" radius="-90.1" height="5.5" color="#FFC65D"></a-cylinder>
+      <a-plane position="0 0 -4" rotation="0 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+      <a-sky color="#00A6E3"></a-sky>
+    </a-scene>
+  </body>
+</html>
